--- a/src/notebooks/scrape-and-process.ipynb
+++ b/src/notebooks/scrape-and-process.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,18 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"aita-500-top-this-week.csv\"\n",
+    "filename = \"data/aita-500-top-this-week.csv\"\n",
     "data = pd.DataFrame(submissions)\n",
     "data.to_csv(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "      <td>Not the A-hole POO Mode</td>\n",
        "      <td>[\"I'm not even sure if I started to resent her...</td>\n",
        "      <td>4253</td>\n",
-       "      <td>15872</td>\n",
+       "      <td>15870</td>\n",
        "      <td>0.96</td>\n",
        "      <td>/r/AmItheAsshole/comments/1iy5n9x/aita_for_ask...</td>\n",
        "      <td>1.740517e+09</td>\n",
@@ -178,8 +178,8 @@
        "      <td>My daughter (17f) recently started dating this...</td>\n",
        "      <td>Not the A-hole</td>\n",
        "      <td>[So he would rather your daughter be married t...</td>\n",
-       "      <td>1481</td>\n",
-       "      <td>10857</td>\n",
+       "      <td>1482</td>\n",
+       "      <td>10851</td>\n",
        "      <td>0.96</td>\n",
        "      <td>/r/AmItheAsshole/comments/1iz4o6f/aita_for_ins...</td>\n",
        "      <td>1.740621e+09</td>\n",
@@ -192,7 +192,7 @@
        "      <td>Not the A-hole</td>\n",
        "      <td>[So... do we maybe see why brother's GF would ...</td>\n",
        "      <td>775</td>\n",
-       "      <td>8091</td>\n",
+       "      <td>8102</td>\n",
        "      <td>0.97</td>\n",
        "      <td>/r/AmItheAsshole/comments/1j0isvh/aita_for_ask...</td>\n",
        "      <td>1.740778e+09</td>\n",
@@ -204,8 +204,8 @@
        "      <td>Earlier in the day, I told my bf that I was go...</td>\n",
        "      <td>Not the A-hole</td>\n",
        "      <td>[It's not your job to help him regulate his em...</td>\n",
-       "      <td>818</td>\n",
-       "      <td>7515</td>\n",
+       "      <td>825</td>\n",
+       "      <td>7539</td>\n",
        "      <td>0.96</td>\n",
        "      <td>/r/AmItheAsshole/comments/1j284st/aita_for_not...</td>\n",
        "      <td>1.740968e+09</td>\n",
@@ -213,16 +213,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Update: AITA because I don't want my half brot...</td>\n",
-       "      <td>this is an update to my [original post](https:...</td>\n",
-       "      <td>UPDATE</td>\n",
-       "      <td>[Definitely time for me to leave the internet ...</td>\n",
-       "      <td>118</td>\n",
-       "      <td>7296</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>/r/AmItheAsshole/comments/1j12uam/update_aita_...</td>\n",
-       "      <td>1.740845e+09</td>\n",
-       "      <td>False</td>\n",
+       "      <td>WIBTA if I send an email to the bday girl’s mo...</td>\n",
+       "      <td>My (43F) daughter Annie 9F) was invited to a p...</td>\n",
+       "      <td>Not the A-hole</td>\n",
+       "      <td>[NTA, but: You should have asked, why there is...</td>\n",
+       "      <td>645</td>\n",
+       "      <td>7366</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>/r/AmItheAsshole/comments/1j2hp1b/wibta_if_i_s...</td>\n",
+       "      <td>1.741005e+09</td>\n",
+       "      <td>1741020672.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -234,38 +234,38 @@
        "1  AITA for insulting my husband for what he said...   \n",
        "2  AITA for asking a guest to not crochet at my b...   \n",
        "3  AITA for not comforting my bf after he didn’t ...   \n",
-       "4  Update: AITA because I don't want my half brot...   \n",
+       "4  WIBTA if I send an email to the bday girl’s mo...   \n",
        "\n",
        "                                                body                  verdict  \\\n",
        "0  My GF really only showers once a week, twice i...  Not the A-hole POO Mode   \n",
        "1  My daughter (17f) recently started dating this...           Not the A-hole   \n",
        "2  I'm (28F) getting married this year (yay!) and...           Not the A-hole   \n",
        "3  Earlier in the day, I told my bf that I was go...           Not the A-hole   \n",
-       "4  this is an update to my [original post](https:...                   UPDATE   \n",
+       "4  My (43F) daughter Annie 9F) was invited to a p...           Not the A-hole   \n",
        "\n",
        "                                            comments  num_comments  upvotes  \\\n",
-       "0  [\"I'm not even sure if I started to resent her...          4253    15872   \n",
-       "1  [So he would rather your daughter be married t...          1481    10857   \n",
-       "2  [So... do we maybe see why brother's GF would ...           775     8091   \n",
-       "3  [It's not your job to help him regulate his em...           818     7515   \n",
-       "4  [Definitely time for me to leave the internet ...           118     7296   \n",
+       "0  [\"I'm not even sure if I started to resent her...          4253    15870   \n",
+       "1  [So he would rather your daughter be married t...          1482    10851   \n",
+       "2  [So... do we maybe see why brother's GF would ...           775     8102   \n",
+       "3  [It's not your job to help him regulate his em...           825     7539   \n",
+       "4  [NTA, but: You should have asked, why there is...           645     7366   \n",
        "\n",
        "   upvote_ratio                                                url  \\\n",
        "0          0.96  /r/AmItheAsshole/comments/1iy5n9x/aita_for_ask...   \n",
        "1          0.96  /r/AmItheAsshole/comments/1iz4o6f/aita_for_ins...   \n",
        "2          0.97  /r/AmItheAsshole/comments/1j0isvh/aita_for_ask...   \n",
        "3          0.96  /r/AmItheAsshole/comments/1j284st/aita_for_not...   \n",
-       "4          0.99  /r/AmItheAsshole/comments/1j12uam/update_aita_...   \n",
+       "4          0.96  /r/AmItheAsshole/comments/1j2hp1b/wibta_if_i_s...   \n",
        "\n",
        "        created        edited  \n",
        "0  1.740517e+09  1740790583.0  \n",
        "1  1.740621e+09         False  \n",
        "2  1.740778e+09  1740780160.0  \n",
        "3  1.740968e+09         False  \n",
-       "4  1.740845e+09         False  "
+       "4  1.741005e+09  1741020672.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -335,8 +335,8 @@
        "      <td>My daughter (17f) recently started dating this...</td>\n",
        "      <td>Not the A-hole</td>\n",
        "      <td>[So he would rather your daughter be married t...</td>\n",
-       "      <td>1481</td>\n",
-       "      <td>10857</td>\n",
+       "      <td>1482</td>\n",
+       "      <td>10851</td>\n",
        "      <td>0.96</td>\n",
        "      <td>/r/AmItheAsshole/comments/1iz4o6f/aita_for_ins...</td>\n",
        "      <td>1.740621e+09</td>\n",
@@ -356,7 +356,7 @@
        "      <td>Not the A-hole</td>\n",
        "      <td>[So... do we maybe see why brother's GF would ...</td>\n",
        "      <td>775</td>\n",
-       "      <td>8091</td>\n",
+       "      <td>8102</td>\n",
        "      <td>0.97</td>\n",
        "      <td>/r/AmItheAsshole/comments/1j0isvh/aita_for_ask...</td>\n",
        "      <td>1.740778e+09</td>\n",
@@ -375,8 +375,8 @@
        "      <td>Earlier in the day, I told my bf that I was go...</td>\n",
        "      <td>Not the A-hole</td>\n",
        "      <td>[It's not your job to help him regulate his em...</td>\n",
-       "      <td>818</td>\n",
-       "      <td>7515</td>\n",
+       "      <td>825</td>\n",
+       "      <td>7539</td>\n",
        "      <td>0.96</td>\n",
        "      <td>/r/AmItheAsshole/comments/1j284st/aita_for_not...</td>\n",
        "      <td>1.740968e+09</td>\n",
@@ -391,32 +391,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Update: AITA because I don't want my half brot...</td>\n",
-       "      <td>this is an update to my [original post](https:...</td>\n",
-       "      <td>UPDATE</td>\n",
-       "      <td>[Definitely time for me to leave the internet ...</td>\n",
-       "      <td>118</td>\n",
-       "      <td>7296</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>/r/AmItheAsshole/comments/1j12uam/update_aita_...</td>\n",
-       "      <td>1.740845e+09</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>WIBTA if I send an email to the bday girl’s mo...</td>\n",
        "      <td>My (43F) daughter Annie 9F) was invited to a p...</td>\n",
        "      <td>Not the A-hole</td>\n",
        "      <td>[NTA, but: You should have asked, why there is...</td>\n",
        "      <td>645</td>\n",
-       "      <td>7343</td>\n",
+       "      <td>7366</td>\n",
        "      <td>0.96</td>\n",
        "      <td>/r/AmItheAsshole/comments/1j2hp1b/wibta_if_i_s...</td>\n",
        "      <td>1.741005e+09</td>\n",
@@ -429,6 +409,26 @@
        "      <td>7</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Update: AITA because I don't want my half brot...</td>\n",
+       "      <td>this is an update to my [original post](https:...</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>[Definitely time for me to leave the internet ...</td>\n",
+       "      <td>118</td>\n",
+       "      <td>7298</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>/r/AmItheAsshole/comments/1j12uam/update_aita_...</td>\n",
+       "      <td>1.740845e+09</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -438,39 +438,39 @@
        "1  AITA for insulting my husband for what he said...   \n",
        "2  AITA for asking a guest to not crochet at my b...   \n",
        "3  AITA for not comforting my bf after he didn’t ...   \n",
-       "4  Update: AITA because I don't want my half brot...   \n",
-       "5  WIBTA if I send an email to the bday girl’s mo...   \n",
+       "4  WIBTA if I send an email to the bday girl’s mo...   \n",
+       "5  Update: AITA because I don't want my half brot...   \n",
        "\n",
        "                                                body         verdict  \\\n",
        "1  My daughter (17f) recently started dating this...  Not the A-hole   \n",
        "2  I'm (28F) getting married this year (yay!) and...  Not the A-hole   \n",
        "3  Earlier in the day, I told my bf that I was go...  Not the A-hole   \n",
-       "4  this is an update to my [original post](https:...          UPDATE   \n",
-       "5  My (43F) daughter Annie 9F) was invited to a p...  Not the A-hole   \n",
+       "4  My (43F) daughter Annie 9F) was invited to a p...  Not the A-hole   \n",
+       "5  this is an update to my [original post](https:...          UPDATE   \n",
        "\n",
        "                                            comments  num_comments  upvotes  \\\n",
-       "1  [So he would rather your daughter be married t...          1481    10857   \n",
-       "2  [So... do we maybe see why brother's GF would ...           775     8091   \n",
-       "3  [It's not your job to help him regulate his em...           818     7515   \n",
-       "4  [Definitely time for me to leave the internet ...           118     7296   \n",
-       "5  [NTA, but: You should have asked, why there is...           645     7343   \n",
+       "1  [So he would rather your daughter be married t...          1482    10851   \n",
+       "2  [So... do we maybe see why brother's GF would ...           775     8102   \n",
+       "3  [It's not your job to help him regulate his em...           825     7539   \n",
+       "4  [NTA, but: You should have asked, why there is...           645     7366   \n",
+       "5  [Definitely time for me to leave the internet ...           118     7298   \n",
        "\n",
        "   upvote_ratio                                                url  \\\n",
        "1          0.96  /r/AmItheAsshole/comments/1iz4o6f/aita_for_ins...   \n",
        "2          0.97  /r/AmItheAsshole/comments/1j0isvh/aita_for_ask...   \n",
        "3          0.96  /r/AmItheAsshole/comments/1j284st/aita_for_not...   \n",
-       "4          0.99  /r/AmItheAsshole/comments/1j12uam/update_aita_...   \n",
-       "5          0.96  /r/AmItheAsshole/comments/1j2hp1b/wibta_if_i_s...   \n",
+       "4          0.96  /r/AmItheAsshole/comments/1j2hp1b/wibta_if_i_s...   \n",
+       "5          0.99  /r/AmItheAsshole/comments/1j12uam/update_aita_...   \n",
        "\n",
        "        created        edited  YTA  YWBTA  NTA  YWNBTA  ESH  NAH  INFO  \n",
        "1  1.740621e+09         False    9      0  164       0   13    2     0  \n",
        "2  1.740778e+09  1740780160.0    2      0  161       0    0    3     3  \n",
        "3  1.740968e+09         False   12      0  143       0   21    5     2  \n",
-       "4  1.740845e+09         False    1      0    2       0    0    0     0  \n",
-       "5  1.741005e+09  1741020672.0   33     38   41       1   15    7     6  "
+       "4  1.741005e+09  1741020672.0   33     38   41       1   15    7     6  \n",
+       "5  1.740845e+09         False    1      0    2       0    0    0     0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,13 +502,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98dbff38c6e64c618f96b85ab41a7e3f",
+       "model_id": "dceee9716ae642bfb5d985d9877508d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,7 +522,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8707538c688843569af9c8e45bc8a578",
+       "model_id": "d97449496e644162bac0f2360d1cb633",
        "version_major": 2,
        "version_minor": 0
       },
@@ -536,7 +536,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cc9463ed7014a9fb88d3602f13dce19",
+       "model_id": "d301ca8e9d334f2a85a187350420ccf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,7 +550,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2386eba5a60405b808cab31b1b7a9c7",
+       "model_id": "f3928bfd590d47b298e377997238fc36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,11 +571,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_data_filename = \"aita-500-top-this-week-processed.csv\"\n",
+    "processed_data_filename = \"data/aita-500-top-this-week-processed.csv\"\n",
     "data.to_csv(processed_data_filename)"
    ]
   }
