feat: adds exploration notebook

--- a/src/notebooks/scrape-and-process.ipynb
+++ b/src/notebooks/scrape-and-process.ipynb
@@ -491,13 +491,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data['created'] = data['created'].apply(lambda x: dt.datetime.fromtimestamp(x))\n",
-    "data['edited'] = data['edited'].apply(lambda x: dt.datetime.fromtimestamp(x) if x > 0 else None)\n",
-    "\n"
+    "data['edited'] = data['edited'].apply(lambda x: dt.datetime.fromtimestamp(x) if x > 0 else None)\n"
    ]
   },
   {
