fix: change document structure based on instructions

--- a/docs/sections/estado-del-arte/estado-del-arte.tex
+++ b/docs/sections/estado-del-arte/estado-del-arte.tex
@@ -1,4 +1,4 @@
-\section{Estado del arte}
+\section{Trabajos relacionados}
 
 El análisis automatizado de decisiones morales en comunidades en línea, especialmente en Reddit, ha captado la atención académica por su potencial para mejorar la comprensión de las dinámicas sociales en estas plataformas. En particular, investigaciones recientes se han enfocado en estudiar cómo las comunidades virtuales realizan juicios éticos sobre situaciones personales complejas, buscando identificar factores que influyen en el veredicto colectivo, tales como características del contenido, perfil del usuario o señales sociales implícitas.
 
